<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/usernameText"
                android:layout_weight="75"
                android:hint="@string/username_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/usernameText"
                android:layout_weight="75"
                android:hint="@string/password_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/confirm_password" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/usernameText"
                android:layout_weight="75"
                android:hint="@string/confirm_password_text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/fields"
        android:layout_below="@id/fields"
        android:text="Submit"
        android:textSize="20dp" />

</RelativeLayout>
